--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
     <link rel="stylesheet" href="/scripts/login_page.css">
 </head>
 <body>
-    <div class="login_page" id="login">
+    <div class="login_card">
+        <div class="login_page" id="login">
         <h2>Account Login</h2>
-        <h3>Enter details below  to login to your account</h3>
-        <form>
+   <h3>Enter details below  to login to your account</h3>
+    
+         <form class="login_form" id="login_form">
             <input class="email" id="email" placeholder="Email Address">
             <input class="password" id="password" placeholder="Password">
-            <button id="login">Login</button>
+            <button class="login_button" id="login">Login</button>
         </form>
-    <div class="sign_up_link_form" id="sign_up_link_form">
+    </div>
+    <div class="sign_up_link_card" id="sign_up_link_card">
         <h3>Don't have an account yet? Sign up for free</h3>
         <a type="button" class="sign_up_link" id="sign_up_link" href="#">Create Account ></a>
     </div>
