--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/scripts/login_page.css">
+    <link rel="stylesheet" href="/styles/login_page.css">
 </head>
 <body>
     <div class="login_card">
@@ -20,5 +20,5 @@
     </div>
     <div class="sign_up_link_card" id="sign_up_link_card">
         <h3>Don't have an account yet? Sign up for free</h3>
-        <a type="button" class="sign_up_link" id="sign_up_link" href="#">Create Account ></a>
+        <a type="button" class="sign_up_link" id="sign_up_link" href="/sign_up_page.html">Create Account ></a>
     </div>
