Styled sign_up_page.html

--- a/sign_up_page.html
+++ b/sign_up_page.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/styles/sign_up_page.css">
 </head>
 <body>
     <dev class="sign_up_card">
@@ -11,8 +12,8 @@
         <form class="sign_up_form" id="sign_up_form">
             <input class="email" id="email" placeholder="Email Address">
             <input class="password" id="password" placeholder="Password">
-            <input class="password" id="password"  placeholder="Enter User Name">
-            <button class="login_button" id="login">Login</button>
+            <input class="password" id="password"  placeholder="User Name">
+            <button class="sign_up_button" id="sign_up">Create Account</button>
         </form>
     </dev>
     <div>Already have an account?<a type="button" id="login_link" href="/index.html" >Login.</a></div>
