Added script link

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/styles/login_page.css">
+    <script src="/scripts/login_page.js"></script>
 </head>
 <body>
     <div class="login_card">
@@ -15,7 +16,7 @@
          <form class="login_form" id="login_form">
             <input class="email" id="email" placeholder="Email Address">
             <input class="password" id="password" placeholder="Password">
-            <button class="login_button" id="login">Login</button>
+            <button type="submit" class="login_button" id="login">Login</button>
         </form>
     </div>
     <div class="sign_up_link_card" id="sign_up_link_card">
