--- a/pages/landing.html
+++ b/pages/landing.html
@@ -73,7 +73,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div>
-            <a href="#home">Home</a>
+            <a href="landing.html">Home</a>
             <a href="#about">About</a>
         </div>
         <div>
