--- a/pages/recipeFiltered.html
+++ b/pages/recipeFiltered.html
@@ -105,7 +105,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div>
-            <a href="#home">Home</a>
+            <a href="landing.html">Home</a>
             <a href="#about">About</a>
         </div>
         <div>
