added admin restaurant page and js file

--- a/pages/adminDashRest.html
+++ b/pages/adminDashRest.html
@@ -97,6 +97,57 @@
         .add-restaurant-container button:hover {
             background-color: #555;
         }
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.4);
+        }
+        .modal-content {
+            background-color: white;
+            margin: 10% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 50%;
+            position: relative;
+        }
+        .close {
+            position: absolute;
+            top: 10px;
+            right: 25px;
+            color: #aaa;
+            font-size: 28px;
+            font-weight: bold;
+        }
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        .modal-content input {
+            width: calc(100% - 20px);
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+        .modal-content button {
+            padding: 10px 20px;
+            background-color: #333;
+            color: white;
+            border: none;
+            cursor: pointer;
+            border-radius: 4px;
+        }
+        .modal-content button:hover {
+            background-color: #555;
+        }
     </style>
 </head>
 <body>
@@ -112,8 +163,8 @@
     <!-- Dashboard -->
     <div class="dashboard">
         <div class="sidebar">
-            <button onclick="location.href='#restaurant'">Restaurant</button>
-            <button onclick="location.href='#user'">User</button>
+            <button onclick="location.href='adminDashRest.html'">Restaurant</button>
+            <button onclick="location.href='adminDashUser.html'">User</button>
         </div>
         <div class="content">
             <!-- Table of Restaurants -->
@@ -122,43 +173,59 @@
                 <thead>
                     <tr>
                         <th>Name</th>
+                        <th>Location</th>
+                        <th>Owner Username</th>
                         <th>Action</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td><input type="text" placeholder="Restaurant 1"></td>
-                        <td class="actions">
-                            <button>Update</button>
-                            <button>Remove</button>
-                            <button>Delete Recipes</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><input type="text" placeholder="Restaurant 2"></td>
-                        <td class="actions">
-                            <button>Update</button>
-                            <button>Remove</button>
-                            <button>Delete Recipes</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><input type="text" placeholder="Restaurant 3"></td>
-                        <td class="actions">
-                            <button>Update</button>
-                            <button>Remove</button>
-                            <button>Delete Recipes</button>
-                        </td>
-                    </tr>
+                <tbody id="restaurant-list">
+                    <!-- Dynamic Content -->
                 </tbody>
             </table>
 
             <!-- Add New Restaurant Button -->
             <div class="add-restaurant-container">
-                <button>Add New Restaurant</button>
+                <button id="addRestaurantBtn">Add New Restaurant</button>
             </div>
         </div>
     </div>
 
+    <!-- Add Restaurant Modal -->
+    <div id="addRestaurantModal" class="modal">
+        <div class="modal-content">
+            <span class="close" id="closeAddModal">&times;</span>
+            <h2>Add New Restaurant</h2>
+            <input type="text" id="addName" placeholder="Name">
+            <input type="text" id="addLocation" placeholder="Location">
+            <input type="text" id="addOwnerId" placeholder="Owner Username">
+            <button id="submitAddRestaurant">Add Restaurant</button>
+        </div>
+    </div>
+
+    <!-- Update Restaurant Modal -->
+    <div id="updateRestaurantModal" class="modal">
+        <div class="modal-content">
+            <span class="close" id="closeUpdateModal">&times;</span>
+            <h2>Update Restaurant</h2>
+            <input type="hidden" id="updateRestaurantId">
+            <input type="text" id="updateName" placeholder="Name">
+            <input type="text" id="updateLocation" placeholder="Location">
+            <input type="text" id="updateOwnerId" placeholder="Owner Username">
+            <button id="submitUpdateRestaurant">Update Restaurant</button>
+        </div>
+    </div>
+
+    <!-- Delete Recipes Modal -->
+    <div id="deleteRecipesModal" class="modal">
+        <div class="modal-content">
+            <span class="close" id="closeDeleteRecipesModal">&times;</span>
+            <h2>Delete Recipes</h2>
+            <div id="recipes-list">
+                <!-- Dynamic Content -->
+            </div>
+        </div>
+    </div>
+
+    <script src="/scripts/adminJs/adminRest.js"></script>
 </body>
 </html>
