--- a/pages/adminDashUser.html
+++ b/pages/adminDashUser.html
@@ -112,8 +112,8 @@
     <!-- Dashboard -->
     <div class="dashboard">
         <div class="sidebar">
-            <button onclick="location.href='#restaurant'">Restaurant</button>
-            <button onclick="location.href='#user'">User</button>
+            <button onclick="location.href='adminDashRest.html'">Restaurant</button>
+            <button onclick="location.href='adminDashUser.html'">User</button>
         </div>
         <div class="content">
             <!-- Table of Restaurants -->
