--- a/pages/adminDashUser.html
+++ b/pages/adminDashUser.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard User</title>
     <style>
+        /* Style code remains unchanged */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -97,6 +98,58 @@
         .add-restaurant-container button:hover {
             background-color: #555;
         }
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.4);
+        }
+        .modal-content {
+            background-color: white;
+            margin: 10% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 50%;
+            position: relative;
+        }
+        .close {
+            position: absolute;
+            top: 10px;
+            right: 25px;
+            color: #aaa;
+            font-size: 28px;
+            font-weight: bold;
+        }
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        .modal-content input,
+        .modal-content select {
+            width: calc(100% - 20px);
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+        .modal-content button {
+            padding: 10px 20px;
+            background-color: #333;
+            color: white;
+            border: none;
+            cursor: pointer;
+            border-radius: 4px;
+        }
+        .modal-content button:hover {
+            background-color: #555;
+        }
     </style>
 </head>
 <body>
@@ -116,46 +169,63 @@
             <button onclick="location.href='adminDashUser.html'">User</button>
         </div>
         <div class="content">
-            <!-- Table of Restaurants -->
+            <!-- Table of Users -->
             <table>
                 <caption style="caption-side: top; font-size: 20px; font-weight: bold; margin-bottom: 10px;">List of Users</caption>
                 <thead>
                     <tr>
                         <th>Username</th>
+                        <th>User Type</th>
                         <th>Action</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td>UserName1</td>
-                        <td class="actions">
-                            <button>Update</button>
-                            <button>Remove</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>UserName2></td>
-                        <td class="actions">
-                            <button>Update</button>
-                            <button>Remove</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>UserName3</td>
-                        <td class="actions">
-                            <button>Update</button>
-                            <button>Remove</button>
-                        </td>
-                    </tr>
+                <tbody id="user-list">
+                    <!-- Dynamic Content -->
                 </tbody>
             </table>
 
-            <!-- Add New Restaurant Button -->
+            <!-- Add New User Button -->
             <div class="add-restaurant-container">
-                <button>Add New Restaurant</button>
+                <button id="addUserBtn">Add New User</button>
             </div>
         </div>
     </div>
 
+    <!-- Add User Modal -->
+    <div id="addUserModal" class="modal">
+        <div class="modal-content">
+            <span class="close" id="closeAddModal">&times;</span>
+            <h2>Add New User</h2>
+            <input type="text" id="addUsername" placeholder="Username">
+            <input type="text" id="addEmail" placeholder="Email">
+            <input type="password" id="addPassword" placeholder="Password">
+            <select id="addUserType">
+                <option value="1">Admin</option>
+                <option value="2">Client</option>
+                <option value="3">Owner</option>
+            </select>
+            <button id="submitAddUser">Add User</button>
+        </div>
+    </div>
+
+    <!-- Update User Modal -->
+    <div id="updateUserModal" class="modal">
+        <div class="modal-content">
+            <span class="close" id="closeUpdateModal">&times;</span>
+            <h2>Update User</h2>
+            <input type="hidden" id="updateUserId">
+            <input type="text" id="updateUsername" placeholder="Username">
+            <input type="text" id="updateEmail" placeholder="Email">
+            <input type="password" id="updatePassword" placeholder="Password">
+            <select id="updateUserType">
+                <option value="1">Admin</option>
+                <option value="2">Client</option>
+                <option value="3">Owner</option>
+            </select>
+            <button id="submitUpdateUser">Update User</button>
+        </div>
+    </div>
+
+    <script src="/scripts/adminJs/adminUser.js"></script>
 </body>
 </html>
