Fixed directory issues

--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     </div>
     <div class="sign_up_link_card" id="sign_up_link_card">
         <h3>Don't have an account yet? Sign up for free</h3>
-        <a type="button" class="sign_up_link" id="sign_up_link" href="/sign_up_page.html">Create Account ></a>
+        <a type="button" class="sign_up_link" id="sign_up_link" href="/pages/sign_up_page.html">Create Account ></a>
     </div>
+    </body>
